Updated broken images

--- a/references.bib
+++ b/references.bib
@@ -323,7 +323,7 @@
 
 @online{elixirbelgium2022,
     title        = {Data Volume},
-    author       = {Elixir Belgium},
+    author       = {Elixir},
     year         = {2022},
     url          = {https://rdm.elixir-belgium.org/data_volume.html},
     urldate      = {01-05-2023}
