--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,4 @@
 ---
-title: Home
 description: "A high level guide and knowledgebase for RNA-Seq experiments and analyses."
 format:
   html:
@@ -10,18 +9,21 @@ format:
       match: false
 ---
 
+# Home {.unnumbered}
 
-
-### [Bulk RNA-Seq](chapters/bulk/index.html)  
+#### [Bulk RNA-Seq](chapters/bulk/index.html)  
 Traditional RNA-Seq experiment from tissue material.
 
-### [Single-Cell RNA-Seq](chapters/sc/index.html)  
+#### [Single-Cell RNA-Seq](chapters/sc/index.html)  
 RNA-Seq experiment where the source material is single cells. Methods such as 10X chromium, Smart-Seq etc.
 
-### [Spatial RNA-Seq](chapters/spatial/index.html)
+#### [Single-Cell VDJ](chapters/vdj/index.html)  
+Single cell VDJ analyses
+
+#### [Spatial RNA-Seq](chapters/spatial/index.html)
 RNA-Seq experiment with spatial information. 10X Visium etc.
 
-### [Meta transcriptomics](chapters/spatial/index.html)  
+#### [Meta transcriptomics](chapters/spatial/index.html)  
 RNA-Seq experiments involving multiple / mixed species.
 
 ::: {.coverbg}
