--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,5 @@
+## bulk rna-seq
+
 @article{conesa2016survey,
   title={A survey of best practices for RNA-seq data analysis},
   author={Conesa, Ana and Madrigal, Pedro and Tarazona, Sonia and Gomez-Cabrero, David and Cervera, Alejandra and McPherson, Andrew and Szcze{\'s}niak, Micha{\l} Wojciech and Gaffney, Daniel J and Elo, Laura L and Zhang, Xuegong and others},
@@ -329,6 +331,8 @@
     urldate      = {01-05-2023}
 }
 
+## sc gene expression ----------------------------------------------------------------------------
+
 @article{luecken2019current,
   title={Current best practices in single-cell RNA-seq analysis: a tutorial},
   author={Luecken, Malte D and Theis, Fabian J},
@@ -337,6 +341,15 @@
   number={6},
   pages={e8746},
   year={2019}
+}
+
+@article{heumos2023best,
+  title={Best practices for single-cell analysis across modalities},
+  author={Heumos, Lukas and Schaar, Anna C and Lance, Christopher and Litinetskaya, Anastasia and Drost, Felix and Zappia, Luke and L{\"u}cken, Malte D and Strobl, Daniel C and Henao, Juan and Curion, Fabiola and others},
+  journal={Nature Reviews Genetics},
+  pages={1--23},
+  year={2023},
+  publisher={Nature Publishing Group UK London}
 }
 
 @article{fullgrabe2020guidelines,
@@ -467,16 +480,6 @@
   publisher={Nature Publishing Group US New York}
 }
 
-@article{de2018single,
-  title={Single cell T cell receptor sequencing: techniques and future challenges},
-  author={De Simone, Marco and Rossetti, Grazisa and Pagani, Massimiliano},
-  journal={Frontiers in Immunology},
-  volume={9},
-  pages={1638},
-  year={2018},
-  publisher={Frontiers Media SA}
-}
-
 @article{ouyang2021shinycell,
   title={ShinyCell: simple and sharable visualization of single-cell gene expression data},
   author={Ouyang, John F and Kamaraj, Uma S and Cao, Elaine Y and Rackham, Owen JL},
@@ -498,6 +501,8 @@
   year={2020},
   publisher={Oxford University Press}
 }
+
+## sc spatial -------------------------------------------------------------------------------
 
 @article{walker2022deciphering,
   title={Deciphering tissue structure and function using spatial transcriptomics},
@@ -528,6 +533,80 @@
   year={2022},
   publisher={Nature Publishing Group US New York}
 }
+
+## sc vdj -----------------------------------------------------------------------------------
+
+@article{primorac2022adaptive,
+  title={Adaptive immune responses and immunity to SARS-CoV-2},
+  author={Primorac, Dragan and Vrdoljak, Kristijan and Brlek, Petar and Paveli{\'c}, Eduard and Molnar, Vilim and Mati{\v{s}}i{\'c}, Vid and Erceg Ivko{\v{s}}i{\'c}, Ivana and Par{\v{c}}ina, Marijo},
+  journal={Frontiers in Immunology},
+  volume={13},
+  pages={2035},
+  year={2022},
+  publisher={Frontiers}
+}
+
+@article{de2018single,
+  title={Single cell T cell receptor sequencing: techniques and future challenges},
+  author={De Simone, Marco and Rossetti, Grazisa and Pagani, Massimiliano},
+  journal={Frontiers in Immunology},
+  volume={9},
+  pages={1638},
+  year={2018},
+  publisher={Frontiers Media SA}
+}
+
+@Inbook{Kavathas2019,
+author="Kavathas, Paula B.
+and Krause, Peter J.
+and Ruddle, Nancy H.",
+editor="Krause, Peter J.
+and Kavathas, Paula B.
+and Ruddle, Nancy H.",
+title="Organization and Cells of the Immune System",
+bookTitle="Immunoepidemiology",
+year="2019",
+publisher="Springer International Publishing",
+address="Cham",
+pages="21--38",
+abstract="The human immune system is designed for protection against invading pathogens. The areas of the body exposed to microbes are the skin and mucosal surfaces of the intestinal, respiratory, reproductive, and urinary tracts. The immune system associated with these surfaces is called barrier immunity. Once a pathogen has entered the body, cells of the innate and adaptive immune system can be activated to fight the infection. Macrophages, dendritic cells, granulocytes, innate lymphoid cells, and invariant and conventional T and B cells function to protect the host. Characteristics of different immune cell types and some of their functions such as phagocytosis (eating) and NETosis (trapping) are presented in this chapter. In order to mount a coordinated and appropriate response, there is cross-talk between the different immune cells. Soluble mediators called cytokines and chemokines are important mechanisms for cell--cell communication. Cytokines and chemokines also provide communication between immune cells and other organs of the body. The adult lymphoid system is composed of primary (bone marrow and thymus) and secondary (lymph node, spleen, Peyer's patches, tonsils, adenoids, lymphoid tissue associated with mucosal surfaces) lymphoid organs that are connected through blood and lymphatic vessels. The lymphatic vessels transport immune cells, fluid, antigen, and fat throughout the body. Tertiary lymphoid organs can form in the context of chronic inflammation. This chapter provides a broad overview of the components of the immune system with greater detail provided in later chapters.",
+isbn="978-3-030-25553-4",
+doi="10.1007/978-3-030-25553-4_2",
+url="https://doi.org/10.1007/978-3-030-25553-4_2"
+}
+
+@incollection{LEWIS201919,
+title = {2 - Organization of the Immune System},
+editor = {Robert R. Rich and Thomas A. Fleisher and William T. Shearer and Harry W. Schroeder and Anthony J. Frew and Cornelia M. Weyand},
+booktitle = {Clinical Immunology (Fifth Edition)},
+publisher = {Elsevier},
+edition = {Fifth Edition},
+address = {London},
+pages = {19-38.e1},
+year = {2019},
+isbn = {978-0-7020-6896-6},
+doi = {https://doi.org/10.1016/B978-0-7020-6896-6.00002-8},
+url = {https://www.sciencedirect.com/science/article/pii/B9780702068966000028},
+author = {Dorothy E. Lewis and Sarah E. Blutt},
+keywords = {Hematopoetic stem cells, Lymphopoiesis, Cluster of differentiation markers, Cytokines, Primary lymphoid organ, Secondary lymphoid organ, Systemic immune system, Mucosal immune system},
+abstract = {The human immune system has sites of production, i.e., bone marrow and the thymus; and sites of differentiation and proliferation, i.e., lymph nodes and the spleen. Immune organization also occurs in the lung, gastrointestinal tract, skin, and adipose tissue. Cells can be tissue bound or move to sites during infection via blood or lymphatics. Pluripotent stem cells in bone marrow give rise to progenitors, which differentiate into lymphoid and myeloid cells as well as red blood cells and platelets. Myeloid cells include neutrophils, basophils, and eosinophils with functions in innate immune responses, as well as monocytes, macrophages, and dendritic cells, which are phagocytic and act as an interface with cells of the acquired immune system. Lymphocytes include antigen-specific cells with DNA-rearranged receptors, T cells and B cells, as well as cells termed innate lymphoid cells, which can be cytotoxic (natural killer cells) or noncytotoxic, with functions that mirror classic T-cell functions.}
+}
+
+@article{MORGAN2022210,
+title = {Unraveling B cell trajectories at single cell resolution},
+journal = {Trends in Immunology},
+volume = {43},
+number = {3},
+pages = {210-229},
+year = {2022},
+issn = {1471-4906},
+doi = {https://doi.org/10.1016/j.it.2022.01.003},
+url = {https://www.sciencedirect.com/science/article/pii/S1471490622000035},
+author = {Dhakshayini Morgan and Vinay Tergaonkar},
+abstract = {During adaptive immunity, B cells differentiate either into memory B cells or plasma cells and produce antibodies against foreign antigens to fight infection. Additionally, they behave as antigen-presenting cells and participate in T cell activation during cellular immune responses. However, their functional dysregulation can result in various autoimmune diseases and cancers. With significant breakthroughs in single cell technologies, assessing individual B cell genomics, transcriptomics, and proteomics can give deeper insights into mammalian B cell development, differentiation, antibody repertoire, and responses under conditions of homeostasis, infection, and aberrations during disease. In this review, we discuss the adoption of single cell approaches to identify different B cell gene signatures and biomarkers in normal and diseased tissues, and subsequent benefits for future therapeutic discoveries.}
+}
+
+## meta transcriptomics ------------------------------------------------------------------------
 
 @article{mehta2021asaim,
   title={ASaiM-MT: a validated and optimized ASaiM workflow for metatranscriptomics analysis within Galaxy framework},
