--- a/index.qmd
+++ b/index.qmd
@@ -1,26 +1,27 @@
 ---
-description: "A high level guide and knowledgebase for RNA-Seq experiments and analyses."
+description: "A knowledgebase for RNA-Seq experiments and analyses."
 format:
   html:
+    page-layout: full
     number-sections: false
-    toc: true
+    toc: false
     css: "assets/css/background.css"
     lightbox: 
       match: false
 ---
 
-# Home {.unnumbered}
+## Home {.unnumbered}
 
-#### [Bulk RNA-Seq](chapters/bulk/index.html)  
+#### [Bulk RNA-seq](chapters/bulk/index.html)  
 Traditional RNA-Seq experiment from tissue material.
 
-#### [Single-Cell RNA-Seq](chapters/sc/index.html)  
+#### [Single-cell RNA-seq](chapters/sc/index.html)  
 RNA-Seq experiment where the source material is single cells. Methods such as 10X chromium, Smart-Seq etc.
 
-#### [Single-Cell VDJ](chapters/vdj/index.html)  
+#### [Single-cell VDJ](chapters/vdj/index.html)  
 Single cell VDJ analyses
 
-#### [Spatial RNA-Seq](chapters/spatial/index.html)
+#### [Spatial RNA-seq](chapters/spatial/index.html)
 RNA-Seq experiment with spatial information. 10X Visium etc.
 
 #### [Meta transcriptomics](chapters/spatial/index.html)  
@@ -28,8 +29,10 @@ RNA-Seq experiments involving multiple / mixed species.
 
 ::: {.coverbg}
 
-::: small
-Updated: <?lua.date?> at <?lua.time?>.
 :::
 
+---
+
+::: small
+Updated: <?lua.date?> at <?lua.time?>.
 :::
