Updated immune, airr

--- a/references.bib
+++ b/references.bib
@@ -502,6 +502,27 @@
   publisher={Oxford University Press}
 }
 
+@article{tran2020benchmark,
+  title={A benchmark of batch-effect correction methods for single-cell RNA sequencing data},
+  author={Tran, Hoa Thi Nhu and Ang, Kok Siong and Chevrier, Marion and Zhang, Xiaomeng and Lee, Nicole Yee Shin and Goh, Michelle and Chen, Jinmiao},
+  journal={Genome biology},
+  volume={21},
+  pages={1--32},
+  year={2020},
+  publisher={Springer}
+}
+
+@article{saelens2019comparison,
+  title={A comparison of single-cell trajectory inference methods},
+  author={Saelens, Wouter and Cannoodt, Robrecht and Todorov, Helena and Saeys, Yvan},
+  journal={Nature biotechnology},
+  volume={37},
+  number={5},
+  pages={547--554},
+  year={2019},
+  publisher={Nature Publishing Group US New York}
+}
+
 ## sc spatial -------------------------------------------------------------------------------
 
 @article{walker2022deciphering,
@@ -585,7 +606,7 @@ address = {London},
 pages = {19-38.e1},
 year = {2019},
 isbn = {978-0-7020-6896-6},
-doi = {https://doi.org/10.1016/B978-0-7020-6896-6.00002-8},
+doi = {10.1016/B978-0-7020-6896-6.00002-8},
 url = {https://www.sciencedirect.com/science/article/pii/B9780702068966000028},
 author = {Dorothy E. Lewis and Sarah E. Blutt},
 keywords = {Hematopoetic stem cells, Lymphopoiesis, Cluster of differentiation markers, Cytokines, Primary lymphoid organ, Secondary lymphoid organ, Systemic immune system, Mucosal immune system},
@@ -600,10 +621,211 @@ number = {3},
 pages = {210-229},
 year = {2022},
 issn = {1471-4906},
-doi = {https://doi.org/10.1016/j.it.2022.01.003},
+doi = {10.1016/j.it.2022.01.003},
 url = {https://www.sciencedirect.com/science/article/pii/S1471490622000035},
 author = {Dhakshayini Morgan and Vinay Tergaonkar},
 abstract = {During adaptive immunity, B cells differentiate either into memory B cells or plasma cells and produce antibodies against foreign antigens to fight infection. Additionally, they behave as antigen-presenting cells and participate in T cell activation during cellular immune responses. However, their functional dysregulation can result in various autoimmune diseases and cancers. With significant breakthroughs in single cell technologies, assessing individual B cell genomics, transcriptomics, and proteomics can give deeper insights into mammalian B cell development, differentiation, antibody repertoire, and responses under conditions of homeostasis, infection, and aberrations during disease. In this review, we discuss the adoption of single cell approaches to identify different B cell gene signatures and biomarkers in normal and diseased tissues, and subsequent benefits for future therapeutic discoveries.}
+}
+
+## atacseq --------------------------------------------------------------------------------------
+
+@article{grandi2022chromatin,
+  title={Chromatin accessibility profiling by ATAC-seq},
+  author={Grandi, Fiorella C and Modi, Hailey and Kampman, Lucas and Corces, M Ryan},
+  journal={Nature Protocols},
+  volume={17},
+  number={6},
+  pages={1518--1552},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{yan2020reads,
+  title={From reads to insight: a hitchhiker’s guide to ATAC-seq data analysis},
+  author={Yan, Feng and Powell, David R and Curtis, David J and Wong, Nicholas C},
+  journal={Genome biology},
+  volume={21},
+  pages={1--16},
+  year={2020},
+  publisher={Springer}
+}
+
+@article{chen2019assessment,
+  title={Assessment of computational methods for the analysis of single-cell ATAC-seq data},
+  author={Chen, Huidong and Lareau, Caleb and Andreani, Tommaso and Vinyard, Michael E and Garcia, Sara P and Clement, Kendell and Andrade-Navarro, Miguel A and Buenrostro, Jason D and Pinello, Luca},
+  journal={Genome biology},
+  volume={20},
+  number={1},
+  pages={1--25},
+  year={2019},
+  publisher={BioMed Central}
+}
+
+@article{stuart2021single,
+  title={Single-cell chromatin state analysis with Signac},
+  author={Stuart, Tim and Srivastava, Avi and Madad, Shaista and Lareau, Caleb A and Satija, Rahul},
+  journal={Nature methods},
+  volume={18},
+  number={11},
+  pages={1333--1341},
+  year={2021},
+  publisher={Nature Publishing Group US New York}
+}
+
+## airr ----------------------------------------------------------------------------------------
+@article{breden2017reproducibility,
+  title={Reproducibility and reuse of adaptive immune receptor repertoire data},
+  author={Breden, Felix and Luning Prak, Eline T and Peters, Bjoern and Rubelt, Florian and Schramm, Chaim A and Busse, Christian E and Vander Heiden, Jason A and Christley, Scott and Bukhari, Syed Ahmad Chan and Thorogood, Adrian and others},
+  journal={Frontiers in immunology},
+  volume={8},
+  pages={1418},
+  year={2017},
+  publisher={Frontiers Media SA}
+}
+
+@article{vander2018airr,
+  title={AIRR community standardized representations for annotated immune repertoires},
+  author={Vander Heiden, Jason Anthony and Marquez, Susanna and Marthandan, Nishanth and Bukhari, Syed Ahmad Chan and Busse, Christian E and Corrie, Brian and Hershberg, Uri and Kleinstein, Steven H and Matsen IV, Frederick A and Ralph, Duncan K and others},
+  journal={Frontiers in immunology},
+  volume={9},
+  pages={2206},
+  year={2018},
+  publisher={Frontiers Media SA}
+}
+
+@article{eugster2022airr,
+  title={AIRR Community Guide to Planning and Performing AIRR-Seq Experiments},
+  author={Eugster, Anne and Bostick, Magnolia L and Gupta, Nidhi and Mariotti-Ferrandiz, Encarnita and Kraus, Gloria and Meng, Wenzhao and Soto, Cinque and Tr{\"u}ck, Johannes and Stervbo, Ulrik and Prak, Eline T Luning and others},
+  journal={Methods and Protocols},
+  pages={261},
+  year={2022},
+  url={https://library.oapen.org/bitstream/handle/20.500.12657/57008/1/978-1-0716-2115-8.pdf}
+}
+
+@article{georgiou2014promise,
+  title={The promise and challenge of high-throughput sequencing of the antibody repertoire},
+  author={Georgiou, George and Ippolito, Gregory C and Beausang, John and Busse, Christian E and Wardemann, Hedda and Quake, Stephen R},
+  journal={Nature biotechnology},
+  volume={32},
+  number={2},
+  pages={158--168},
+  year={2014},
+  publisher={Nature Publishing Group US New York},
+  url={https://www.nature.com/articles/nbt.2782}
+}
+
+@article{barennes2021benchmarking,
+  title={Benchmarking of T cell receptor repertoire profiling methods reveals large systematic biases},
+  author={Barennes, Pierre and Quiniou, Valentin and Shugay, Mikhail and Egorov, Evgeniy S and Davydov, Alexey N and Chudakov, Dmitriy M and Uddin, Imran and Ismail, Mazlina and Oakes, Theres and Chain, Benny and others},
+  journal={Nature biotechnology},
+  volume={39},
+  number={2},
+  pages={236--245},
+  year={2021},
+  publisher={Nature Publishing Group US New York}
+}
+
+@book{janeway-1994,
+	author = {Janeway, Charles and Travers, Paul},
+	month = {1},
+	publisher = {Taylor & Francis},
+	title = {{Immunobiology}},
+	year = {1994},
+}
+
+@article{andreani2022benchmarking,
+  title={Benchmarking computational methods for B-cell receptor reconstruction from single-cell RNA-seq data},
+  author={Andreani, Tommaso and Slot, Linda M and Gabillard, Samuel and Struebing, Carsten and Reimertz, Claus and Yaligara, Veeranagouda and Bakker, Aleida M and Olfati-Saber, Reza and Toes, Ren{\'e} EM and Scherer, Hans U and others},
+  journal={NAR Genomics and Bioinformatics},
+  volume={4},
+  number={3},
+  pages={lqac049},
+  year={2022},
+  publisher={Oxford University Press},
+  url={https://academic.oup.com/nargab/article/4/3/lqac049/6643029}
+}
+
+@article{smakaj2020benchmarking,
+  title={Benchmarking immunoinformatic tools for the analysis of antibody repertoire sequences},
+  author={Smakaj, Erand and Babrak, Lmar and Ohlin, Mats and Shugay, Mikhail and Briney, Bryan and Tosoni, Deniz and Galli, Christopher and Grobelsek, Vendi and D’Angelo, Igor and Olson, Branden and others},
+  journal={Bioinformatics},
+  volume={36},
+  number={6},
+  pages={1731--1739},
+  year={2020},
+  publisher={Oxford University Press},
+  url={https://academic.oup.com/bioinformatics/article/36/6/1731/5686386}
+}
+
+@article{rosati2017overview,
+  title={Overview of methodologies for T-cell receptor repertoire analysis},
+  author={Rosati, Elisa and Dowds, C Marie and Liaskou, Evaggelia and Henriksen, Eva Kristine Klemsdal and Karlsen, Tom H and Franke, Andre},
+  journal={BMC biotechnology},
+  volume={17},
+  number={1},
+  pages={1--16},
+  year={2017},
+  publisher={BioMed Central},
+  url={https://bmcbiotechnol.biomedcentral.com/articles/10.1186/s12896-017-0379-9}
+}
+
+@article{greiff2015bioinformatic,
+  title={Bioinformatic and statistical analysis of adaptive immune repertoires},
+  author={Greiff, Victor and Miho, Enkelejda and Menzel, Ulrike and Reddy, Sai T},
+  journal={Trends in immunology},
+  volume={36},
+  number={11},
+  pages={738--749},
+  year={2015},
+  publisher={Elsevier},
+  url={https://www.cell.com/trends/immunology/fulltext/S1471-4906(15)00223-9}
+}
+
+@article{yermanos2018tracing,
+  title={Tracing antibody repertoire evolution by systems phylogeny},
+  author={Yermanos, Alexander Dimitri and Dounas, Andreas Kevin and Stadler, Tanja and Oxenius, Annette and Reddy, Sai T},
+  journal={Frontiers in immunology},
+  volume={9},
+  pages={2149},
+  year={2018},
+  publisher={Frontiers Media SA},
+  url = {https://www.frontiersin.org/articles/10.3389/fimmu.2018.02149/full},
+}
+
+@article{ralph2020using,
+  title={Using B cell receptor lineage structures to predict affinity},
+  author={Ralph, Duncan K and Matsen IV, Frederick A},
+  journal={PLOS Computational Biology},
+  volume={16},
+  number={11},
+  pages={e1008391},
+  year={2020},
+  publisher={Public Library of Science San Francisco, CA USA},
+  url={https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1008391}
+}
+
+@article{hoehn2022phylogenetic,
+  title={Phylogenetic analysis of migration, differentiation, and class switching in B cells},
+  author={Hoehn, Kenneth B and Pybus, Oliver G and Kleinstein, Steven H},
+  journal={PLoS computational biology},
+  volume={18},
+  number={4},
+  pages={e1009885},
+  year={2022},
+  publisher={Public Library of Science San Francisco, CA USA},
+  url={https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1009885}
+}
+
+@article{pavlovic2021immuneml,
+  title={The immuneML ecosystem for machine learning analysis of adaptive immune receptor repertoires},
+  author={Pavlovi{\'c}, Milena and Scheffer, Lonneke and Motwani, Keshav and Kanduri, Chakravarthi and Kompova, Radmila and Vazov, Nikolay and Waagan, Knut and Bernal, Fabian LM and Costa, Alexandre Almeida and Corrie, Brian and others},
+  journal={Nature Machine Intelligence},
+  volume={3},
+  number={11},
+  pages={936--944},
+  year={2021},
+  publisher={Nature Publishing Group UK London},
+  url={https://www.nature.com/articles/s42256-021-00413-z}
 }
 
 ## meta transcriptomics ------------------------------------------------------------------------
