Updated lua shortcode, added atacseq, updated immune
- Added atacseq
- Updated lua meta shortcode
- Changed vdj to immune repertoire

--- a/references.bib
+++ b/references.bib
@@ -502,6 +502,27 @@
   publisher={Oxford University Press}
 }
 
+@article{tran2020benchmark,
+  title={A benchmark of batch-effect correction methods for single-cell RNA sequencing data},
+  author={Tran, Hoa Thi Nhu and Ang, Kok Siong and Chevrier, Marion and Zhang, Xiaomeng and Lee, Nicole Yee Shin and Goh, Michelle and Chen, Jinmiao},
+  journal={Genome biology},
+  volume={21},
+  pages={1--32},
+  year={2020},
+  publisher={Springer}
+}
+
+@article{saelens2019comparison,
+  title={A comparison of single-cell trajectory inference methods},
+  author={Saelens, Wouter and Cannoodt, Robrecht and Todorov, Helena and Saeys, Yvan},
+  journal={Nature biotechnology},
+  volume={37},
+  number={5},
+  pages={547--554},
+  year={2019},
+  publisher={Nature Publishing Group US New York}
+}
+
 ## sc spatial -------------------------------------------------------------------------------
 
 @article{walker2022deciphering,
@@ -605,6 +626,102 @@ url = {https://www.sciencedirect.com/science/article/pii/S1471490622000035},
 author = {Dhakshayini Morgan and Vinay Tergaonkar},
 abstract = {During adaptive immunity, B cells differentiate either into memory B cells or plasma cells and produce antibodies against foreign antigens to fight infection. Additionally, they behave as antigen-presenting cells and participate in T cell activation during cellular immune responses. However, their functional dysregulation can result in various autoimmune diseases and cancers. With significant breakthroughs in single cell technologies, assessing individual B cell genomics, transcriptomics, and proteomics can give deeper insights into mammalian B cell development, differentiation, antibody repertoire, and responses under conditions of homeostasis, infection, and aberrations during disease. In this review, we discuss the adoption of single cell approaches to identify different B cell gene signatures and biomarkers in normal and diseased tissues, and subsequent benefits for future therapeutic discoveries.}
 }
+
+@article{breden2017reproducibility,
+  title={Reproducibility and reuse of adaptive immune receptor repertoire data},
+  author={Breden, Felix and Luning Prak, Eline T and Peters, Bjoern and Rubelt, Florian and Schramm, Chaim A and Busse, Christian E and Vander Heiden, Jason A and Christley, Scott and Bukhari, Syed Ahmad Chan and Thorogood, Adrian and others},
+  journal={Frontiers in immunology},
+  volume={8},
+  pages={1418},
+  year={2017},
+  publisher={Frontiers Media SA}
+}
+
+@article{vander2018airr,
+  title={AIRR community standardized representations for annotated immune repertoires},
+  author={Vander Heiden, Jason Anthony and Marquez, Susanna and Marthandan, Nishanth and Bukhari, Syed Ahmad Chan and Busse, Christian E and Corrie, Brian and Hershberg, Uri and Kleinstein, Steven H and Matsen IV, Frederick A and Ralph, Duncan K and others},
+  journal={Frontiers in immunology},
+  volume={9},
+  pages={2206},
+  year={2018},
+  publisher={Frontiers Media SA}
+}
+
+@article{georgiou2014promise,
+  title={The promise and challenge of high-throughput sequencing of the antibody repertoire},
+  author={Georgiou, George and Ippolito, Gregory C and Beausang, John and Busse, Christian E and Wardemann, Hedda and Quake, Stephen R},
+  journal={Nature biotechnology},
+  volume={32},
+  number={2},
+  pages={158--168},
+  year={2014},
+  publisher={Nature Publishing Group US New York}
+}
+
+@article{barennes2021benchmarking,
+  title={Benchmarking of T cell receptor repertoire profiling methods reveals large systematic biases},
+  author={Barennes, Pierre and Quiniou, Valentin and Shugay, Mikhail and Egorov, Evgeniy S and Davydov, Alexey N and Chudakov, Dmitriy M and Uddin, Imran and Ismail, Mazlina and Oakes, Theres and Chain, Benny and others},
+  journal={Nature biotechnology},
+  volume={39},
+  number={2},
+  pages={236--245},
+  year={2021},
+  publisher={Nature Publishing Group US New York}
+}
+
+@book{janeway-1994,
+	author = {Janeway, Charles and Travers, Paul},
+	month = {1},
+	publisher = {Taylor & Francis},
+	title = {{Immunobiology}},
+	year = {1994},
+}
+
+## atacseq --------------------------------------------------------------------------------------
+
+@article{grandi2022chromatin,
+  title={Chromatin accessibility profiling by ATAC-seq},
+  author={Grandi, Fiorella C and Modi, Hailey and Kampman, Lucas and Corces, M Ryan},
+  journal={Nature Protocols},
+  volume={17},
+  number={6},
+  pages={1518--1552},
+  year={2022},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{yan2020reads,
+  title={From reads to insight: a hitchhiker’s guide to ATAC-seq data analysis},
+  author={Yan, Feng and Powell, David R and Curtis, David J and Wong, Nicholas C},
+  journal={Genome biology},
+  volume={21},
+  pages={1--16},
+  year={2020},
+  publisher={Springer}
+}
+
+@article{chen2019assessment,
+  title={Assessment of computational methods for the analysis of single-cell ATAC-seq data},
+  author={Chen, Huidong and Lareau, Caleb and Andreani, Tommaso and Vinyard, Michael E and Garcia, Sara P and Clement, Kendell and Andrade-Navarro, Miguel A and Buenrostro, Jason D and Pinello, Luca},
+  journal={Genome biology},
+  volume={20},
+  number={1},
+  pages={1--25},
+  year={2019},
+  publisher={BioMed Central}
+}
+
+@article{stuart2021single,
+  title={Single-cell chromatin state analysis with Signac},
+  author={Stuart, Tim and Srivastava, Avi and Madad, Shaista and Lareau, Caleb A and Satija, Rahul},
+  journal={Nature methods},
+  volume={18},
+  number={11},
+  pages={1333--1341},
+  year={2021},
+  publisher={Nature Publishing Group US New York}
+}
+
 
 ## meta transcriptomics ------------------------------------------------------------------------
 
