--- a/index.qmd
+++ b/index.qmd
@@ -13,19 +13,22 @@ format:
 ## Home {.unnumbered}
 
 #### [Bulk RNA-seq](chapters/bulk/index.html)  
-Traditional RNA-Seq experiment from tissue material.
+Gene expression from bulk tissue material.
 
 #### [Single-cell RNA-seq](chapters/sc/index.html)  
-RNA-Seq experiment where the source material is single cells. Methods such as 10X chromium, Smart-Seq etc.
+Gene expression from single cells. 10X chromium, Smart-seq etc.
 
-#### [Single-cell VDJ](chapters/vdj/index.html)  
-Single cell VDJ analyses
+#### [Single-cell immune profiling](chapters/immune/index.html)  
+Single cell adaptive immune profiling, AIRR-Seq, VDJ etc.
 
 #### [Spatial RNA-seq](chapters/spatial/index.html)
-RNA-Seq experiment with spatial information. 10X Visium etc.
+Gene expression with spatial information. 10X Visium etc.
+
+#### [ATAC-Seq](chapters/atacseq/index.html)  
+Genome wide chromatin accessibility.
 
 #### [Meta transcriptomics](chapters/spatial/index.html)  
-RNA-Seq experiments involving multiple / mixed species.
+Gene expression from multiple/mixed populations or species.
 
 ::: {.coverbg}
 
@@ -34,5 +37,5 @@ RNA-Seq experiments involving multiple / mixed species.
 ---
 
 ::: small
-Updated: <?lua.date?> at <?lua.time?>.
+Updated: {{< current_date >}} at {{< current_time >}}.
 :::
