--- a/references.bib
+++ b/references.bib
@@ -769,6 +769,7 @@ abstract = {During adaptive immunity, B cells differentiate either into memory B
 }
 
 ## airr ----------------------------------------------------------------------------------------
+
 @article{breden2017reproducibility,
   title={Reproducibility and reuse of adaptive immune receptor repertoire data},
   author={Breden, Felix and Luning Prak, Eline T and Peters, Bjoern and Rubelt, Florian and Schramm, Chaim A and Busse, Christian E and Vander Heiden, Jason A and Christley, Scott and Bukhari, Syed Ahmad Chan and Thorogood, Adrian and others},
@@ -922,6 +923,16 @@ abstract = {During adaptive immunity, B cells differentiate either into memory B
   year={2021},
   publisher={Nature Publishing Group UK London},
   url={https://www.nature.com/articles/s42256-021-00413-z}
+}
+
+@article{collins2024airr,
+  title={AIRR-C IG Reference Sets: curated sets of immunoglobulin heavy and light chain germline genes},
+  author={Collins, Andrew M and Ohlin, Mats and Corcoran, Martin and Heather, James M and Ralph, Duncan and Law, Mansun and Mart{\'\i}nez-Barnetche, Jesus and Ye, Jian and Richardson, Eve and Gibson, William S and others},
+  journal={Frontiers in Immunology},
+  volume={14},
+  pages={1330153},
+  year={2024},
+  publisher={Frontiers}
 }
 
 ## meta transcriptomics ------------------------------------------------------------------------
