--- a/index.qmd
+++ b/index.qmd
@@ -16,7 +16,7 @@ Gene expression from bulk tissue material.
 #### [Single-cell RNA-seq](chapters/sc/index.html)  
 Gene expression from single cells. 10X chromium, Smart-seq etc.
 
-#### [Immunoprofiling](chapters/immune/index.html)  
+#### [AIRR-Seq](chapters/airr/index.html)  
 AIRR-Seq, Rep-Seq, Repertoire, VDJ and immune profiling.
 
 #### [Spatial RNA-seq](chapters/spatial/index.html)
