Added more references

--- a/references.bib
+++ b/references.bib
@@ -754,7 +754,8 @@ abstract = {During adaptive immunity, B cells differentiate either into memory B
   number={1},
   pages={1--25},
   year={2019},
-  publisher={BioMed Central}
+  publisher={BioMed Central},
+  url={https://genomebiology.biomedcentral.com/articles/10.1186/s13059-019-1854-5}
 }
 
 @article{stuart2021single,
@@ -765,7 +766,8 @@ abstract = {During adaptive immunity, B cells differentiate either into memory B
   number={11},
   pages={1333--1341},
   year={2021},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://www.nature.com/articles/s41592-021-01282-5}
 }
 
 ## airr ----------------------------------------------------------------------------------------
@@ -787,7 +789,8 @@ abstract = {During adaptive immunity, B cells differentiate either into memory B
   volume={9},
   pages={2206},
   year={2018},
-  publisher={Frontiers Media SA}
+  publisher={Frontiers Media SA},
+  url={https://www.frontiersin.org/journals/immunology/articles/10.3389/fimmu.2018.02206/full}
 }
 
 @article{eugster2022airr,
@@ -819,7 +822,8 @@ abstract = {During adaptive immunity, B cells differentiate either into memory B
   number={2},
   pages={236--245},
   year={2021},
-  publisher={Nature Publishing Group US New York}
+  publisher={Nature Publishing Group US New York},
+  url={https://www.nature.com/articles/s41587-020-0656-3}
 }
 
 @book{janeway-1994,
@@ -932,7 +936,19 @@ abstract = {During adaptive immunity, B cells differentiate either into memory B
   volume={14},
   pages={1330153},
   year={2024},
-  publisher={Frontiers}
+  publisher={Frontiers},
+  url={https://www.frontiersin.org/journals/immunology/articles/10.3389/fimmu.2023.1330153/full}
+}
+
+@article{yaari2015practical,
+  title={Practical guidelines for B-cell receptor repertoire sequencing analysis},
+  author={Yaari, Gur and Kleinstein, Steven H},
+  journal={Genome medicine},
+  volume={7},
+  pages={1--14},
+  year={2015},
+  publisher={Springer},
+  url={https://link.springer.com/article/10.1186/s13073-015-0243-2}
 }
 
 ## meta transcriptomics ------------------------------------------------------------------------
